Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-122052

View3D as sourceItem of texture in XR not working

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.8.0 FF
    • 6.8
    • Quick: 3D
    • Meta Quest 3
    • Android
    • fb348df3b (dev), 458ad7a3b (dev), a17a3e4cd (6.7)

    Description

      Using View3D as sourceItem for texture doesn't work in XR. Includes modified XR-simple that can be used to repro the issue.

       

      Output the application gives before it crashes:

      W Qt_XR_Picking_Demo: prepareRenderPass() called with an already prepared render pass context
      W Qt_XR_Picking_Demo: No QSGTexture provided from updateSampledImage(). This is wrong.
      W Qt_XR_Picking_Demo: recordRenderPass() called without a prepared render pass context
      W Qt_XR_Picking_Demo: prepareRenderPass() called with an already prepared render pass context
      F Qt_XR_Picking_Demo: ASSERT: "m_currentLayer != nullptr" in file C:/Users/elhautal/Documents/QtSource/qt6/qtquick3d/src/runtimerender/rendererimpl/qssgrenderer.cpp, line 580
      F libc    : Fatal signal 6 (SIGABRT), code -1 (SI_QUEUE) in tid 24883 (qtMainLoopThrea), pid 24857 (example.picking)

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              stromme Christian
              eliashautala Elias Hautala
              Votes:
              1 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes